Fix freedv menu shortcut in NSIS installer.
git-svn-id: https://svn.code.sf.net/p/freetel/code/freedv-dev@2284 01035d8c-6547-0410-b346-abe4f91aad63

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,8 +27,8 @@ project(FreeDV)
 #
 # Set FreeDV version and generate src/version.h
 #
-set(FREEDV_VERSION_MAJOR 0)
-set(FREEDV_VERSION_MINOR 99)
+set(FREEDV_VERSION_MAJOR 1)
+set(FREEDV_VERSION_MINOR 0)
 set(FREEDV_VERSION_PATCH FALSE)
 set(FREEDV_VERSION ${FREEDV_VERSION_MAJOR}.${FREEDV_VERSION_MINOR})
 if(FREEDV_VERSION_PATCH)
@@ -37,6 +37,8 @@ endif()
 set(FREEDV_VERSION_SUFFIX "devel")
 if(FREEDV_VERSION_SUFFIX)
     set(FREEDV_VERSION_STRING "${FREEDV_VERSION} ${FREEDV_VERSION_SUFFIX}")
+else()
+    set(FREEDV_VERSION_STRING "${FREEDV_VERSION}")
 endif()
 message(STATUS "FreeDV version: ${FREEDV_VERSION_STRING}")
 configure_file(cmake/version.h.in src/version.h @ONLY)
@@ -478,9 +480,11 @@ if(WIN32)
     set(CPACK_NSIS_INSTALLED_ICON_NAME "bin\\\\freedv.exe")
     set(CPACK_NSIS_DISPLAY_NAME "${CPACK_PACKAGE_INSTALL_DIRECTORY}")
     set(CPACK_NSIS_PACKAGE_NAME "FreeDV")
+    set(CPACK_PACKAGE_EXECUTABLES freedv;FreeDV)
     set(CPACK_NSIS_URL_INFO_ABOUT "http://freedv.org")
     set(CPACK_NSIS_MODIFY_PATH OFF)
-    set(CPACK_NSIS_MENU_LINKS "http://freedv.org" "FreeDV Homepage")
+    set(CPACK_NSIS_MENU_LINKS
+        "http://freedv.org" "FreeDV Homepage")
     include(CPack)
 endif(WIN32)
 
