Debian packaging for freedv, thanks Stuart
git-svn-id: https://svn.code.sf.net/p/freetel/code/freedv-dev@2293 01035d8c-6547-0410-b346-abe4f91aad63

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -223,7 +223,9 @@ message(STATUS "Threads library flags: ${CMAKE_THREAD_LIBS_INIT}")
 #
 if(NOT USE_STATIC_CODEC2)
     message(STATUS "Looking for codec2...")
-    find_package(codec2 CONFIG QUIET)
+    # 'CONFIG' removed due to incompatibility with cmake version
+    # in Ubuntu 12.04 (Precise) -- Stuart Longland
+    find_package(codec2 QUIET)
     if(codec2_FOUND)
         get_target_property(CODEC2_LIBRARY codec2 LOCATION)
         message(STATUS "  codec2 library: ${CODEC2_LIBRARY}")
