added a first pass dialog for plug in config
git-svn-id: https://svn.code.sf.net/p/freetel/code/freedv-dev@2671 01035d8c-6547-0410-b346-abe4f91aad63

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ set(FREEDV_SOURCES
     dlg_filter.cpp
     dlg_options.cpp
     dlg_ptt.cpp
+    dlg_plugin.cpp
     fdmdv2_main.cpp
     fdmdv2_pa_wrapper.cpp
     fdmdv2_plot.cpp
