--- a/cmake/GetDependencies.cmake.in
+++ b/cmake/GetDependencies.cmake.in
@@ -13,7 +13,7 @@ set(CMAKE_FIND_ROOT_PATH @CMAKE_FIND_ROOT_PATH@)
 set(FREEDV_EXE ${CMAKE_BINARY_DIR}/src/freedv.exe)
 
 include(GetPrerequisites)
-get_prerequisites("${FREEDV_EXE}" _deps 1 1 "" "${CMAKE_SYSTEM_LIBRARY_PATH}")
+get_prerequisites("${FREEDV_EXE}" _deps 1 0 "" "")
 foreach(_runtime ${_deps})
     message("Looking for ${_runtime}")
     find_library(RUNTIME_${_runtime} ${_runtime})
