--- a/cmake/GetDependencies.cmake.in
+++ b/cmake/GetDependencies.cmake.in
@@ -18,6 +18,18 @@ foreach(_runtime ${_deps})
     message("Looking for ${_runtime}")
     find_library(RUNTIME_${_runtime} ${_runtime})
     message("${RUNTIME_${_runtime}}")
+    if("${_runtime}" MATCHES "^libgcc.*")
+        message("Looking for dependencies of ${_runtime}")
+        get_prerequisites("${RUNTIME_${_runtime}}" _deps2 1 0 "" "")
+        foreach(_runtime2 ${_deps2})
+        find_library(RUNTIME_${_runtime2} ${_runtime2})
+        message("${RUNTIME_${_runtime2}}")
+        if(RUNTIME_${_runtime2})
+            file(INSTALL DESTINATION "${CMAKE_INSTALL_PREFIX}/bin"
+            TYPE EXECUTABLE FILES "${RUNTIME_${_runtime2}}")
+        endif()
+        endforeach()
+    endif()
     if(RUNTIME_${_runtime})
         file(INSTALL DESTINATION "${CMAKE_INSTALL_PREFIX}/bin"
         TYPE EXECUTABLE FILES "${RUNTIME_${_runtime}}")
