Updated method of detecting dependencies for MinGW builds.
git-svn-id: https://svn.code.sf.net/p/freetel/code/freedv-dev@3034 01035d8c-6547-0410-b346-abe4f91aad63

--- a/cmake/GetDependencies.cmake.in
+++ b/cmake/GetDependencies.cmake.in
@@ -18,16 +18,16 @@ foreach(_runtime ${_deps})
     message("Looking for ${_runtime}")
     find_library(RUNTIME_${_runtime} ${_runtime})
     message("${RUNTIME_${_runtime}}")
-    if("${_runtime}" MATCHES "^libgcc.*")
+    if(RUNTIME_${_runtime})
         message("Looking for dependencies of ${_runtime}")
         get_prerequisites("${RUNTIME_${_runtime}}" _deps2 1 0 "" "")
         foreach(_runtime2 ${_deps2})
-        find_library(RUNTIME_${_runtime2} ${_runtime2})
-        message("${RUNTIME_${_runtime2}}")
-        if(RUNTIME_${_runtime2})
-            file(INSTALL DESTINATION "${CMAKE_INSTALL_PREFIX}/bin"
-            TYPE EXECUTABLE FILES "${RUNTIME_${_runtime2}}")
-        endif()
+            find_library(RUNTIME_${_runtime2} ${_runtime2})
+            message("${RUNTIME_${_runtime2}}")
+            if(RUNTIME_${_runtime2})
+                file(INSTALL DESTINATION "${CMAKE_INSTALL_PREFIX}/bin"
+                TYPE EXECUTABLE FILES "${RUNTIME_${_runtime2}}")
+            endif()
         endforeach()
     endif()
     if(RUNTIME_${_runtime})
