moved serial support out of fdmdv2_main, PTT test function for Hamlib and serial
git-svn-id: https://svn.code.sf.net/p/freetel/code/freedv-dev@3289 01035d8c-6547-0410-b346-abe4f91aad63

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,7 @@ set(FREEDV_SOURCES
     fdmdv2_plot_spectrum.cpp
     fdmdv2_plot_waterfall.cpp
     hamlib.cpp
+    serialport.cpp
     topFrame.cpp
     sox_biquad.c
     comp.h
