changed patch level, added soem minor bugs to README
git-svn-id: https://svn.code.sf.net/p/freetel/code/freedv-dev@3291 01035d8c-6547-0410-b346-abe4f91aad63

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,8 +30,8 @@ project(FreeDV)
 # Set FreeDV version and generate src/version.h
 #
 set(FREEDV_VERSION_MAJOR 1)
-set(FREEDV_VERSION_MINOR 3)
-set(FREEDV_VERSION_PATCH FALSE)
+set(FREEDV_VERSION_MINOR 2)
+set(FREEDV_VERSION_PATCH 2)
 set(FREEDV_VERSION ${FREEDV_VERSION_MAJOR}.${FREEDV_VERSION_MINOR})
 if(FREEDV_VERSION_PATCH)
     set(FREEDV_VERSION ${FREEDV_VERSION}.${FREEDV_VERSION_PATCH})
