fixed some formatting in debian files
git-svn-id: https://svn.code.sf.net/p/freetel/code/freedv-dev@3327 01035d8c-6547-0410-b346-abe4f91aad63

--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Homepage: http://www.freedv.org
 #Vcs-Browser: http://anonscm.debian.org/?p=collab-maint/freedv.git;a=summary
 
 Package: freedv
-Architecture: amd64
+Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeDV: Open-Source Digital Voice
  FreeDV is a digital voice system for HF radio. This
