tweaked debian files to get building on Ubuntu 16 with strange problem finding libraries.  Review this later
git-svn-id: https://svn.code.sf.net/p/freetel/code/freedv-dev@3334 01035d8c-6547-0410-b346-abe4f91aad63

--- a/debian/rules
+++ b/debian/rules
@@ -28,3 +28,7 @@ override_dh_auto_configure:
 	       -DCMAKE_LIBRARY_PATH=$(DEB_HOST_MULTIARCH) \
 	       -DUSE_STATIC_CODEC2=TRUE \
 	       -DUSE_STATIC_SPEEXDSP=TRUE
+override_dh_shlibdeps:
+	dh_shlibdeps -- \
+          -l/lib/x86_64-linux-gnu \
+          -l/usr/lib/x86_64-linux-gnu
