--- a/debian/control
+++ b/debian/control
@@ -1,16 +1,16 @@
-Source: freedv
+Source: freedv-dev
 Section: main
 Priority: optional
 Maintainer: Stuart Longland <stuartl@longlandclan.yi.org>
 Build-Depends: debhelper (>= 9), cmake, 
  libhamlib-dev, libsamplerate-dev, libasound2-dev, libao-dev, libgsm1-dev,
- portaudio19-dev, libsox-dev, libsndfile1-dev, libwxgtk3.0-dev
+ portaudio19-dev, libsndfile1-dev, libwxgtk3.0-dev
 Standards-Version: 3.9.5
 Homepage: http://www.freedv.org
 #Vcs-Git: git://anonscm.debian.org/collab-maint/freedv.git
 #Vcs-Browser: http://anonscm.debian.org/?p=collab-maint/freedv.git;a=summary
 
-Package: freedv
+Package: freedv-dev
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeDV: Open-Source Digital Voice
