Gnome software indexing comment line, thanks Maitland
git-svn-id: https://svn.code.sf.net/p/freetel/code/freedv-dev@3357 01035d8c-6547-0410-b346-abe4f91aad63

--- a/contrib/freedv.desktop
+++ b/contrib/freedv.desktop
@@ -6,3 +6,4 @@ Icon=freedv
 Type=Application
 Terminal=false
 Categories=GTK;GNOME;AudioVideo;Audio;HamRadio;
+Comment=Digital Voice mode for HF Radio
