Fixes use of codec2 from build tree.
git-svn-id: https://svn.code.sf.net/p/freetel/code/freedv-dev@3554 01035d8c-6547-0410-b346-abe4f91aad63

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -197,19 +197,25 @@ message(STATUS "Threads library flags: ${CMAKE_THREAD_LIBS_INIT}")
 # Find codec2
 #
 if(CODEC2_BUILD_DIR)
+    set(USE_STATIC_CODEC2 OFF CACHE BOOL "" FORCE)
     message(STATUS "Using codec2 from build directory...")
-    load_cache(${CODEC2_BUILD_DIR} codec2_SOURCE_DIR)
-    get_filename_component(CODEC2_BUILD_INCLUDE_DIR ${CODEC2_BUILD_DIR} 
+    get_filename_component(CODEC2_BUILD_DIR ${CODEC2_BUILD_DIR} 
         ABSOLUTE BASE_DIR ${CMAKE_BINARY_DIR})
-    message(STATUS "  Build dir: ${CODEC2_BUILD_INCLUDE_DIR}")
+    message(STATUS "  Build include dir: ${CODEC2_BUILD_DIR}")
+    load_cache(${CODEC2_BUILD_DIR} codec2_SOURCE_DIR)
     find_path(CODEC2_SOURCE_INCLUDE_DIR codec2.h
         PATHS ${codec2_SOURCE_DIR}
         PATH_SUFFIXES src
         NO_DEFAULT_PATH)
     message(STATUS "  Source include dir: ${CODEC2_SOURCE_INCLUDE_DIR}")
-    find_library(CODEC2_LIBRARY NAMES codec2 PATH_SUFFIXES src)
+    find_library(CODEC2_LIBRARY NAMES codec2
+        PATHS ${CODEC2_BUILD_DIR}
+        PATH_SUFFIXES src
+        NO_DEFAULT_PATH)
+    message(STATUS "  Library: ${CODEC2_LIBRARY}")
+    list(APPEND FREEDV_LINK_LIBS ${CODEC2_LIBRARY})
     include_directories(${CODEC2_SOURCE_INCLUDE_DIR}
-        ${CODEC2_BUILD_INCLUDE_DIR})
+        ${CODEC2_BUILD_DIR})
 else(CODEC2_BUILD_DIR)
 if(NOT USE_STATIC_CODEC2)
     message(STATUS "Looking for codec2...")
