Tweak freedv subversion logic to make sure SVN_REVISION is always defined.
git-svn-id: https://svn.code.sf.net/p/freetel/code/freedv-dev@3566 01035d8c-6547-0410-b346-abe4f91aad63

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,8 +67,10 @@ if("${_src_dir}" STREQUAL "freedv-dev")
         add_definitions(-DSVN_REVISION="${FREEDV_WC_REVISION}")
     else(Subversion_FOUND)
         message(WARNING "Subversion not found. Can not determine svn revision.")
-        add_definitions(-DSVN_REVISION="None")
+        add_definitions(-DSVN_REVISION="Unknown")
     endif(Subversion_FOUND)
+else()
+    add_definitions(-DSVN_REVISION="None")
 endif()
 
 
