Update portaudio to latest release, 20161030, and default to static build for MinGW builds.
git-svn-id: https://svn.code.sf.net/p/freetel/code/freedv-dev@3624 01035d8c-6547-0410-b346-abe4f91aad63

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,6 +132,9 @@ else(BOOTSTRAP_WXWIDGETS AND NOT EXISTS ${WXCONFIG})
 #
 if(MINGW)
     message(STATUS "System is MinGW.")
+    # Default to static build of portaudio until I can figure out why the
+    # shared DLL doesn't work.
+    set(USE_STATIC_PORTAUDIO TRUE)
     # Setup HOST variable.
     include(cmake/MinGW.cmake)
     # This sets up the exe icon for windows under mingw.
