BSD patch thanks SASANO
git-svn-id: https://svn.code.sf.net/p/freetel/code/freedv-dev@3996 01035d8c-6547-0410-b346-abe4f91aad63

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -421,7 +421,8 @@ endif()
 #
 # Find libdl for dlopen/dlclose
 #
-if(UNIX)
+if(CMAKE_SYSTEM_NAME MATCHES "Linux")
+    message("Linux")
     message(STATUS "Looking for dl library.")
     find_library(DL_LIBRARY dl)
     if(DL_LIBRARY)
@@ -434,7 +435,7 @@ On Linux systems try installing:
     glibc-dev (DEB based systems)"
         )
     endif()
-endif(UNIX)
+endif()
 
     
 #Freedv 
